# api-users

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile.toml  README.md
.github/: renovate.json
.github/workflows/: ci.yaml  lint.yaml  publish.yaml  test.yaml
benches/: category-insert-db.rs  category-serde.rs  graphql-interface.rs  user-insert-db.rs  users-serde.rs
crates/api-core/: Cargo.toml
crates/api-core/src/: lib.rs
crates/api-core/src/api/: error.rs  mod.rs
crates/api-core/src/tests/: async_graphql.rs  db.rs  mod.rs
crates/api-database/: Cargo.toml
crates/api-database/src/: collections.rs  entity.rs  lib.rs
crates/api-database/src/mutation/: account.rs  mod.rs  session.rs  verification_token.rs
crates/api-database/src/query/: mod.rs  session.rs  users.rs  verification_token.rs
crates/api-database/src/redis/: cache_keys.rs  cluster.rs  mod.rs  redis_query.rs
crates/api-database/src/tests/: mod.rs  mutation.rs  query.rs  redis.rs
crates/api-interface/: Cargo.toml
crates/api-interface/src/: lib.rs
crates/api-interface/src/graphql/: mod.rs
crates/api-interface/src/graphql/mutation/: account.rs  mod.rs  session.rs  user.rs  verification_token.rs
crates/api-interface/src/graphql/query/: mod.rs  session.rs  user.rs  verification_token.rs
crates/api-interface/src/graphql/query/pagination/: mod.rs
crates/api-interface/src/graphql/subscription/: mod.rs  user.rs
crates/api-interface/src/tests/: mod.rs  mutation.rs  query.rs  subscription.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: main.rs
crates/api-server/src/routes/: mod.rs
crates/api-server/src/routes/middleware/: graphql.rs  mod.rs
crates/api-server/src/state/: env.rs  mod.rs
crates/api-server/src/telemetry/: metrics.rs  mod.rs  tracing.rs
crates/api-server/src/tests/: mod.rs
resources/: database-schema.surql
