[package]
name = "api-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { workspace = true, optional = true }
async-trait = "0.1.77"
serde = { workspace = true, optional = true }
thiserror.workspace = true
time.workspace = true
trait-variant.workspace = true
uuid = { workspace = true, features = ["serde"] }

[features]
default = []
async-graphql = ["dep:async-graphql", "async-graphql/uuid", "async-graphql/time"]
serde = ["serde/derive"]

[dev-dependencies]
bincode = "1.3.3"
criterion.workspace = true
fake.workspace = true
serde_json.workspace = true
tokio.workspace = true

[[bench]]
name = "users-serde"
harness = false
path = "../../benches/users-serde.rs"
