[package]
name = "api-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-core = { workspace = true, features = ["serde"] }
async-trait.workspace = true
bb8 = "0.8.3"
bb8-redis = "0.14.0"
bincode = "1.3.3"
futures-util.workspace = true
meilisearch-sdk = { workspace = true, features = ["reqwest-rustls"] }
redis = { version = "0.24.0", default-features = false, features = ["cluster-async", "tokio-comp"] }
serde.workspace = true
serde_json = "1.0.113"
surrealdb.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true


[dev-dependencies]
anyhow.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }
dotenvy.workspace = true
fake.workspace = true
tokio = { workspace = true, features = ["macros"] }
uuid.workspace = true

[[bench]]
name = "database-insert"
harness = false
path = "../../benches/user-insert-db.rs"
