[package]
name = "api-users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
api-interface = { version = "0.1.0", path = "../api-interface" }
async-graphql = { workspace = true, features = ["playground", "tracing"] }
async-graphql-axum.workspace = true
axum = { version = "0.7.5", features = ["macros", "ws"] }
dotenvy.workspace = true
metrics = { version = "0.22.3", default-features = false }
metrics-exporter-prometheus = { version = "0.14.0", default-features = false }
opentelemetry.workspace = true
opentelemetry-otlp = "0.15.0"
opentelemetry-semantic-conventions = { version = "0.14.0", default-features = false }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing.workspace = true
tracing-opentelemetry = "0.24.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sentry = { version = "0.32.3", default-features = false, features = ["reqwest", "rustls", "tower", "tracing"] }
tracing-loki = { version = "0.2.4", default-features = false, features = ["rustls", "compat-0-2-1"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
